[gd_scene load_steps=11 format=3 uid="uid://733kcn5abptu"]

[ext_resource type="PackedScene" uid="uid://jwx3ghsbhymh" path="res://scenes/game/grid/grid.tscn" id="1_2qm51"]
[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_hrhd6"]
[ext_resource type="PackedScene" uid="uid://c22hqjd76ir6v" path="res://scenes/game/score/score.tscn" id="1_ud7bf"]
[ext_resource type="AudioStream" uid="uid://c5f14u427533x" path="res://assets/sound/Wav/Confirm_tones/style4/confirm_style_4_echo_006.wav" id="2_6o6bo"]
[ext_resource type="Texture2D" uid="uid://ba77ttaupd1ln" path="res://assets/section-sky-1.png" id="2_14o2l"]
[ext_resource type="PackedScene" uid="uid://bqwxihbimuuus" path="res://scenes/game/level_timer/level_timer.tscn" id="2_78uw5"]
[ext_resource type="PackedScene" uid="uid://by65ps6pypqvf" path="res://scenes/game/cloud/cloud.tscn" id="3_3pg8u"]
[ext_resource type="Texture2D" uid="uid://dnv7ny8pqa6we" path="res://assets/slidein.png" id="5_e4o5l"]
[ext_resource type="Texture2D" uid="uid://bikv4nwe6ch4r" path="res://assets/window2-yellow.png" id="6_wl4fa"]
[ext_resource type="Script" path="res://scenes/game/Camera2D.gd" id="9_2hxfr"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hrhd6")
levelup_sound = ExtResource("2_6o6bo")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -319.0
offset_top = -462.0
offset_right = 466.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_14o2l")

[node name="Cloud" parent="TextureRect2" instance=ExtResource("3_3pg8u")]
position = Vector2(2032, 1404)

[node name="Score" parent="." instance=ExtResource("1_ud7bf")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 554.0
offset_top = -353.0
offset_right = 554.0
offset_bottom = -353.0

[node name="LevelTimer" parent="." instance=ExtResource("2_78uw5")]
layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -309.0
offset_right = 275.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_wl4fa")
expand_mode = 1

[node name="Grid" parent="." instance=ExtResource("1_2qm51")]
layout_mode = 1
offset_left = -229.5
offset_top = -264.5
offset_right = 299.5
offset_bottom = 264.5
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
grid_size = 2

[node name="LeftSlide" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -621.0
offset_top = -310.0
offset_right = -333.0
offset_bottom = 312.0
grow_vertical = 2
texture = ExtResource("5_e4o5l")
expand_mode = 1

[node name="RightSlide" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1632.0
offset_top = -310.0
offset_right = 1920.0
offset_bottom = 312.0
grow_vertical = 2
texture = ExtResource("5_e4o5l")
expand_mode = 1
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(581, 330)
zoom = Vector2(0.8, 0.8)
script = ExtResource("9_2hxfr")

[node name="ShakeTimer" type="Timer" parent="Camera2D"]
wait_time = 0.2
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="all_matched" from="Score" to="." method="_on_all_matched"]
[connection signal="out_of_time" from="LevelTimer" to="Grid" method="_on_level_timer_out_of_time"]
[connection signal="gameover" from="Grid" to="." method="game_over"]
[connection signal="shake_screen" from="Grid" to="Camera2D" method="screen_shake"]
[connection signal="update_score" from="Grid" to="Score" method="_on_update_score"]
[connection signal="timeout" from="Camera2D/ShakeTimer" to="Camera2D" method="_on_shake_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_cloud_timer_timeout"]
